Started Speakers and Worked on Margins

--- a/images/.picasa.ini
+++ b/images/.picasa.ini
@@ -59,3 +59,7 @@ filters=crop64=1,15760000dcbdffff;bw=1;
 backuphash=54390
 crop=rect64(c231e46ffffdd1e)
 filters=crop64=1,c231e46ffffdd1e;bw=1;finetune2=1,0.000000,0.000000,0.089825,00000000,0.000000;
+[ElspethBrown.jpg]
+backuphash=17400
+crop=rect64(10a00000b1deffff)
+filters=crop64=1,10a00000b1deffff;bw=1;
